--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task Manager</title>
-    <link rel="stylesheet" href="assets/styles/output.css" />
+    <link rel="stylesheet" href="./assets/styles/output.css" />
   </head>
   <body>
-    <h1 class="text-blue-600">TAilwincs</h1>
+    <h1 class="text-2xl text-red-400 text-center">Task manager</h1>
   </body>
 </html>
