--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="assets/styles/output.css" />
   </head>
   <body>
-    <h1 class="text-blue-600">TAilwincs</h1>
+    <h1 class="text-red-600 text-2xl">TAilwincs</h1>
   </body>
 </html>
